--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 
-#yourElement {
+.yourElement {
   -webkit-animation-duration: 3s;
   -webkit-animation-delay: 2s;
   -webkit-animation-iteration-count: infinite;
